remember previous current value on boot to prevent fallback to 8c on (re)boot

--- a/confs/base.yaml
+++ b/confs/base.yaml
@@ -8,3 +8,8 @@ switch:
       - logger.set_level: VERBOSE
     turn_off_action:
       - logger.set_level: ERROR
+
+button:
+  - platform: restart
+    id: restart_button
+    name: Restart
