--- a/ecodan-remote-thermostat-esphome.yaml
+++ b/ecodan-remote-thermostat-esphome.yaml
@@ -35,7 +35,7 @@ api:
 #  thermostat-room-1: !include { file: confs/thermostat-room.yaml, vars: { room_identifier: 1, room_name: "Room 2" } }
 
 external_components:
-  - source: github://gekkekoe/esphome-ecodan-remote-thermostat@main
+  - source: https://github.com/desaster77-cloud/esphome-ecodan-remote-thermostat/tree/main
     components: [ ecodan ]
     refresh: always
 
