--- a/confs/esp32c6.yaml
+++ b/confs/esp32c6.yaml
@@ -5,7 +5,7 @@ esphome:
     board_build.flash_mode: dio
 
 esp32:
-  board: esp32-c6
+  board: esp32c6
   framework:
     type: esp-idf
     version: recommended
