--- a/confs/esp32c6.yaml
+++ b/confs/esp32c6.yaml
@@ -5,13 +5,8 @@ esphome:
     board_build.flash_mode: dio
 
 esp32:
-  board: esp32
-  framework:
-    type: esp-idf
-    version: recommended
-    # Custom sdkconfig options
-    sdkconfig_options:
-      COMPILER_OPTIMIZATION_SIZE: y
+  board: esp32dev
+  variant: esp32c6
 
 uart:
   id: uart_ecodan
